<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <TextView
        android:id="@+id/tv_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainpurple"
        android:padding="@dimen/margin"
        android:text="@string/dashboard"
        android:textAlignment="center"
        style="@style/tv_name_page"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_dashboard_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainpurple"
        android:paddingStart="@dimen/ten"
        android:text="@string/balance"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dashboard"
        tools:ignore="RtlSymmetry" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/tv_dashboard_number_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainpurple"
        android:paddingBottom="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_dashboard_balance">

        <TextView
            android:id="@+id/tv_number_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/_30_000"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/bt_switch_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textOff="@string/dolar"
            android:textOn="@string/euro"
            android:theme="@style/SwitchCurrencyButton"
            app:showText="true" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleview_dashboard_list_user"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:scrollbars="vertical"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dashboard_number_balance">

    </androidx.recyclerview.widget.RecyclerView>


</androidx.constraintlayout.widget.ConstraintLayout>