<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@drawable/gradient"
    tools:context=".activities.LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_gravity="center"
            android:padding="40dp"
            android:alpha="0.94"
            android:background="@drawable/view_round">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logoitss"
                android:padding="10dp"
                android:layout_marginHorizontal="40dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/username"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/logo"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="30dp"/>

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_username"
                android:layout_marginTop="5dp"
                android:hint="@string/enter_your_username"
                android:textSize="22sp"
                android:paddingHorizontal="5dp"
                android:background="@drawable/edittext_background"/>

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/password"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/et_username"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="30dp"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_password"
                android:layout_marginTop="@dimen/margin"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:paddingHorizontal="5dp"
                android:background="@drawable/edittext_background"
                android:textSize="22sp"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/bt_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/et_password"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="30dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/bt_switch"
                app:layout_constraintTop_toBottomOf="@+id/et_password"
                android:text="@string/agree"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:textSize="17sp"
                android:textColor="@color/white"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_login"
                android:layout_width="0dp"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@+id/bt_switch"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="30dp"
                android:textAlignment="center"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:background="@drawable/bt_round_false"
                />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>