<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_profile"
    tools:context=".fragments.ProfileFragment">

    <TextView
        android:id="@+id/tv_profile"
        style="@style/tv_name_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin"
        android:text="@string/profile"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardview_image_profile"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        app:cardCornerRadius="90dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile">

        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:background="@drawable/logo_alert_dialog_round"
            android:src="@drawable/femaleavatar" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_account_profile"
        style="@style/tv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview_image_profile" />

    <TextView
        android:id="@+id/tv_separator"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/margin_round_tv_profile"
        app:layout_constraintTop_toBottomOf="@+id/tv_account_profile" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:weightSum="3"
        app:layout_constraintTop_toBottomOf="@+id/tv_separator">

        <LinearLayout
            style="@style/horizontal_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/tv_profile_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/holder_name" />

            <TextView
                android:id="@+id/tv_holder_name_profile"
                style="@style/tv_profile_end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="Ana" />

        </LinearLayout>

        <LinearLayout
            style="@style/horizontal_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                style="@style/tv_profile_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/card_number" />

            <TextView
                android:id="@+id/tv_card_number_profile"
                style="@style/tv_profile_end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="@string/IBAN" />

        </LinearLayout>

        <LinearLayout
            style="@style/horizontal_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                style="@style/tv_profile_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bank" />

            <TextView
                android:id="@+id/tv_bank_profile"
                style="@style/tv_profile_end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="Banca Transilvania" />
        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>