<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:background="@drawable/alert_dialog_round"
    android:padding="20dp">

    <ImageView
        android:id="@+id/image_logo_alert_dialog"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="100dp"
        android:background="@drawable/logo_alert_dialog_round"
        android:src="@drawable/empty"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo_alert_dialog" />

    <TextView
        android:id="@+id/tv_iban_alert_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="9dp"
        android:textColor="@color/lightGray"
        app:layout_constraintTop_toBottomOf="@+id/spinner_company"
        tools:text="@string/iban"/>

    <EditText
        android:id="@+id/et_details_alert_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_details"
        android:hint="@string/enter_company_details_here"
        android:paddingHorizontal="5dp"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_iban_alert_dialog" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_done_alert_dialog"
        style="@style/ButtonDone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bt_done_alert_dialog_false"
        android:enabled="false"
        android:text="@string/done"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_details_alert_dialog"/>


</androidx.constraintlayout.widget.ConstraintLayout>