<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:paddingBottom="20dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:padding="@dimen/margin"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/card_alert_dialog"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/card_alert_dialog">

        <ImageView
            android:id="@+id/image_logo_alert_dialog"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@drawable/logo_alert_dialog_round"
            android:src="@drawable/empty" />
    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_alert_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/alert_dialog_round"
        android:paddingHorizontal="40dp"
        android:paddingVertical="30dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_name_company_alert_dialog"
            style="@style/Tv_NameLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            tools:text="@string/Dedeman"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_status_alert_dialog"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="20dp"
            android:src="@drawable/pending"
            app:layout_constraintLeft_toRightOf="@+id/tv_name_company_alert_dialog"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_iban_alert_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:ellipsize="end"
            tools:text="@string/IBAN"
            android:textColor="@color/lightGray"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_company_alert_dialog" />

        <TextView
            android:id="@+id/tv_details_alert_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLines="3"
            android:ellipsize="end"
            tools:text="@string/randomText"
            android:textColor="@color/lightGray"
            app:layout_constraintTop_toBottomOf="@+id/tv_iban_alert_dialog">

        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>